[package]
authors = ["Yao <yaojianpin@sohu.com>"]
description = "A simple trait to markup the struct and help recognize the struct's attributes"
edition = "2021"
keywords = ["tags"]
license = "MIT"
name = "acts-tag"
repository = "https://github.com/yaojianpin/acts-tag.git"
version = "0.2.0"

[dependencies]
acts-tag-derive = {path = "./acts-tag-derive", version = "0.2.0"}
acts-tag-value = {path = "./acts-tag-value", version = "0.2.0"}

[dev-dependencies]
serde = "1.0.160"

[workspace]
members = ["acts-tag-derive", "acts-tag-value"]
