[package]
authors = ["Yao <yaojianpin@sohu.com>"]
description = "provide proc-macro Tags derive for acts-tag"
edition = "2021"
license = "MIT"
name = "acts-tag-derive"
repository = "https://github.com/yaojianpin/acts-tag.git"
version = "0.2.0"

[lib]
proc-macro = true

[dependencies]
acts-tag-value = {path = "../acts-tag-value", version = "0.2.0"}
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.13"
