[package]
authors = ["Yao <yaojianpin@sohu.com>"]
description = "provide binary Value for acts-tag"
edition = "2021"
license = "MIT"
name = "acts-tag-value"
repository = "https://github.com/yaojianpin/acts-tag.git"
version = "0.2.0"

[dependencies]
bincode = "1.3.3"
serde = {version = "1.0.160", features = ["derive"]}
